fixed Favorite Color on form

--- a/module-4/01_Intro_HTML_CSS/student-exercise/info-form/index.html
+++ b/module-4/01_Intro_HTML_CSS/student-exercise/info-form/index.html
@@ -31,7 +31,7 @@
             </div>
             <div>
                 <label for="favoriteColor">Favorite Color:</label>
-                <input type="text" id="favoriteColor" name="favoriteColor"/>
+                <input type="color" id="favoriteColor" name="favoriteColor"/>
             </div>
             <div>
                 <label for="favoriteNumber">Favorite Number:</label>
