--- a/module-4/10_CSS_Selectors/lecture-final/05-trello/index.html
+++ b/module-4/10_CSS_Selectors/lecture-final/05-trello/index.html
@@ -8,7 +8,11 @@
     <link
       href="https://fonts.googleapis.com/css?family=Raleway"
       rel="stylesheet"
-    />        
+    />  
+    <link href="https://fonts.googleapis.com/css2?family=Goldman&display=swap" rel="stylesheet">      
+    
+    <link rel="stylesheet" href="style.css" />
+  
   </head>
 
   <body>
@@ -50,7 +54,7 @@
         <a href="#">Add another card</a>
       </div>
 
-      <!-- <div class="trello-list">
+      <div class="trello-list">
         <h2>Module 1 Week 1</h2>
         <ol class="cards">
           <li class="card">
@@ -146,7 +150,7 @@
           <li class="card">Capstone Day 2</li>
         </ol>
         <a href="#">Add another card</a>
-      </div> -->
+      </div>
     </main>
   </body>
 </html>
