--- a/module-4/15-Week1_Review/candy_corn_and_css/index.html
+++ b/module-4/15-Week1_Review/candy_corn_and_css/index.html
@@ -42,7 +42,7 @@
     </main>
 
     <section id="order-now">
-        <img src="https://www.deerfield-beach.com/ImageRepository/Document?documentID=10179" alt="National Candy Corn Day">
+        <img src="fall-festival.jpeg" alt="National Candy Corn Day">
         <p>Don't forget to sign up! Next Monday, we're holding our 4th annual fall festival! You'll be sure to have a
             blast, running through our corn-maze, riding our super tall slide into a pit of corn kernels, and picking
             your very own pumpkins.</p>
