--- a/module-4/21_JavaScript_Functions/lecture-final/test.html
+++ b/module-4/21_JavaScript_Functions/lecture-final/test.html
@@ -10,6 +10,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chai/4.1.2/chai.js"></script>
     <script>mocha.setup('bdd')</script>
 
+    <script src="functions.js"></script>
+
     <!-- load code you want to test here -->
     <script src="lecture.js"></script>
 
