--- a/module-4/22_DOM/lecture-final/product-reviews/index.html
+++ b/module-4/22_DOM/lecture-final/product-reviews/index.html
@@ -16,6 +16,16 @@
         <h2 id="page-title">Product Reviews for <span class="name"></span></h2>
         <p class="description"></p>
         <!-- reviews go here -->
+        <!-- <div class="review">
+            <h4>Review name</h4>
+            <div class="rating">
+                <img src="img/star.png" class="ratingStar" />
+                <img src="img/star.png" class="ratingStar" />
+                <img src="img/star.png" class="ratingStar" />
+            </div>
+            <h3>What a book!</h3>
+            <p>The text of the review</p>
+        </div> -->
     </div>
 
     <script src="js/app.js"></script>
