Events Lecture code

--- a/module-4/23_Event_Handling/lecture-final/event-delegation-demo/index.html
+++ b/module-4/23_Event_Handling/lecture-final/event-delegation-demo/index.html
@@ -34,6 +34,8 @@
 
     <button id="btnAddOrange">Add Orange</button>
 
+    <input type="color" id="colorpicker" />
+    <button id="btnAddAnyColor">Add Any Color</button>
     <script src="index.js"></script>
   </body>
 </html>
